# CA_authorization

./: .env  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
src/authorization/: models.py  repository.py  router.py  schemas.py  service.py  utils.py
src/registration/: repository.py  router.py  schemas.py  service.py  utils.py
src/settings/: database.py  exception.py  models.py  repository.py  service.py  settings.py
src/vault/: service.py
vault/config/: vault-config.json
vault/policies/: policy.hcl
