[tool.poetry]
name = "sa-auth-microservice"
version = "1.0"
description = "Authorization microservice for social app"
authors = ["LedxDeliveryFlopp <korstim18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
email-validator = "^2.1.1"
python-jose = "^3.3.0"
hvac = "^2.2.0"
passlib = "^1.7.4"
pydantic-settings = "^2.2.1"
ruff = "^0.4.3"
alembic = "^1.13.1"
pre-commit = "^3.7.0"
mypy = "^1.10.0"
types-passlib = "^1.7.7.20240327"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
pre-commit = "^3.7.0"